--- a/method_trace_plugin/build.gradle
+++ b/method_trace_plugin/build.gradle
@@ -23,6 +23,8 @@ plugins {
     id "com.github.dcendents.android-maven"
 }
 
+group = "com.github.dragonforest"
+
 repositories {
     google()
     jcenter()
